# PeopleDistributor

./: .gitignore  Cargo.toml  LICENSE.md  PeopleDistributor.sln  README.md  package-lock.json  package.json
PeopleDistributer_Simulated_Annealing/: Data.csv  PeopleDistributer_Simulated_Annealing.vcxproj  PeopleDistributer_Simulated_Annealing.vcxproj.filters  PeopleDistributor_main.cpp  State.cpp  State.h  data old (1).csv  data old (2).csv  subroutines.cpp  subroutines.h
PeopleDistributor/: PeopleDistributor.vcxproj.filters  PeopleDistributor_main.cpp  State.cpp  State.h  subroutines.cpp  subroutines.h
legacy_cpp/PeopleDistributor/: PeopleDistributor.vcxproj
legacy_rust/: Cargo.toml
legacy_rust/src/: main.rs  state.rs  subroutines.rs
python/: solver_using_google_cp.py
rust/src/: main.rs  state.rs  subroutines.rs
solver-core/: Cargo.toml  README.md  test_logging_debug.rs  test_output.txt
solver-core/examples/: integration_test.rs  late_arrivals_demo.rs  session_specific_demo.rs
solver-core/src/: data_driven_tests.rs  lib.rs  models.rs  solver.rs
solver-core/src/algorithms/: mod.rs  simulated_annealing.rs
solver-core/tests/: benchmark.rs  data_driven_tests.rs  recommended_settings.rs  test_settings.yaml
solver-core/tests/test_cases/: basic_clique_test.json  benchmark_constrained.json  benchmark_large_gender_immovable.json  benchmark_unconstrained.json  benchmark_very_large.json  benchmark_very_large_constrained.json  clique_swap_functionality_test.json  constraint_cannot_be_together.json  constraint_immovable_person.json  constraint_must_stay_together.json  contraint_cannot_be_together.json  google_cp_equivalent_test.json  hard_constraints_stress_test.json  late_arrivals_early_departures_test.json  repetition_penalty_test.json  score_breakdown_demo.json  session_specific_constraints_test.json  social_golfer_problem.json  soft_constraints_test.json  stop_condition_no_improvement.json  stop_condition_time_limit.json  transfer_test.json  ui_demo_data_test.json  ui_demo_data_test_no_attr.json  user_missing_session_test.json  zero_temperature_test.json
solver-server/: Cargo.toml
solver-server/src/: main.rs
solver-server/src/api/: handlers.rs  routes.rs
solver-server/src/jobs/: manager.rs
solver-wasm/: Cargo.toml
solver-wasm/.cargo/: config.toml
solver-wasm/src/: lib.rs
webapp/: .eslintignore  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vercel-build.sh  vercel.json  vite.config.ts
webapp/public/: callback-test.html  package.json  solver-worker.js  solver_wasm.d.ts  solver_wasm.js  solver_wasm_bg.wasm  solver_wasm_bg.wasm.d.ts
webapp/public/test_cases/: basic_clique_test.json  benchmark_constrained.json  manifest.json  (+8 more)
webapp/src/: App.tsx  MainApp.tsx  index.css  main.tsx
(+43 files in other folders)
