[package]
name = "solver-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "solver_core"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
rand = "0.9.1"
uuid = { version = "1.8.0", features = ["v4", "serde"] }
indicatif = "0.17.8"
getrandom = { version = "0.3.3" }
log = "0.4"

[dev-dependencies]
rand_chacha = "0.9.0"
