[package]
name = "solver-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "solver_core"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0.190", features = ["derive"] }
rand = { version = "0.9.1", features = ["std_rng"] }
uuid = { version = "1.8.0", features = ["v4", "serde", "js"] }
indicatif = "0.17.8"
getrandom = { version = "0.3", features = ["wasm_js"] }
log = "0.4"
serde_json = "1.0.108"
thiserror = "2.0.12"
serde_yaml = "0.9.34-deprecated"

[target.'cfg(target_arch = "wasm32")'.dependencies.getrandom]
version = "0.3"
features = ["wasm_js"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"

[dev-dependencies]
rand_chacha = "0.9.0"
