[package]
name = "solver-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "solver-server"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7.5", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.8.0", features = ["v4", "serde"] }
indicatif = "0.17.8"
rand = "0.8.5"
dashmap = "5.5.3"

solver-core = { path = "../solver-core" }
 