[package]
name = "solver-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
solver-core = { path = "../solver-core" }
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
getrandom = { version = "0.3", features = ["wasm_js"] }

[features]
default = ["console_error_panic_hook"]

[dependencies.console_error_panic_hook]
version = "0.1"
optional = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
